--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
     Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/">Matheus de Almeida Ferreira</a>.
   </div>
   <main class="card">
-    <div class="qr_code">
+    <h1 class="sr-only">QR Card Component</h1>
+    <div class="qr_code" role="contentinfo">
       <img src="./images\image-qr-code.png" alt="qr code" id="qr_image">
       </div>
-    <div id="text">
+    <div class="text" role="contentinfo">
       <p class="main_text">Improve your front-end skills by building projects</p>
-        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  </div>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </main>
 </body>
 </html>
