--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level-->
   
-  <div class="attribution">
+  <div class="attribution" role="none">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/">Matheus de Almeida Ferreira</a>.
   </div>
   <main class="card">
     <h1 class="sr-only">QR Card Component</h1>
-    <div class="qr_code" role="contentinfo">
+    <div class="qr_code" role="figure">
       <img src="./images\image-qr-code.png" alt="qr code" id="qr_image">
       </div>
-    <div class="text" role="contentinfo">
+    <div class="text" role="heading">
       <p class="main_text">Improve your front-end skills by building projects</p>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
