--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level-->
   
-  <div class="attribution" role="none presentation">
+  <div class="attribution" role="presentation">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/">Matheus de Almeida Ferreira</a>.
   </div>
@@ -113,7 +113,7 @@
     <div class="qr_code" role="figure">
       <img src="./images/image-qr-code.png" alt="qr code" id="qr_image">
       </div>
-    <div class="text" role="text">
+    <div class="text" role="textbox">
       <p class="main_text">Improve your front-end skills by building projects</p>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
