--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="qr_code" role="figure">
       <img src="./images/image-qr-code.png" alt="qr code" id="qr_image">
       </div>
-    <div class="text" role="textbox">
+    <div class="text" role="note">
       <p class="main_text">Improve your front-end skills by building projects</p>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
