--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level-->
   
   <div class="attribution" role="presentation">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/">Matheus de Almeida Ferreira</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" role="complementary">Frontend Mentor</a>. 
+    Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" role="link">Matheus de Almeida Ferreira</a>.
   </div>
   <main class="card">
     <h1 class="sr-only">QR Card Component</h1>
