--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   
   <div class="attribution" role="presentation">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" >Matheus de Almeida Ferreira</a>.
+    Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" target="_blank">Matheus de Almeida Ferreira</a>.
   </div>
   <main class="card">
     <h1 class="sr-only">QR Card Component</h1>
