--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level-->
   
-  <div class="attribution" role="presentation">
+  <header class="attribution" role="presentation">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" target="_blank">Matheus de Almeida Ferreira</a>.
-  </div>
+  </header>
   <main class="card">
     <h1 class="sr-only">QR Card Component</h1>
     <div class="qr_code" role="figure">
