--- a/index.html
+++ b/index.html
@@ -104,10 +104,6 @@
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level-->
   
-  <div class="attribution" role="banner">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" target="_blank">Matheus de Almeida Ferreira</a>.
-  </div>
   <main class="card">
     <h1 class="sr-only">QR Card Component</h1>
     <div class="qr_code" role="figure">
@@ -118,5 +114,9 @@
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </main>
+  <footer class="attribution" role="banner">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" target="_blank">Matheus de Almeida Ferreira</a>.
+  </footer>
 </body>
 </html>
