--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </main>
-  <footer class="attribution" role="banner">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://matheus-a-ferreira.github.io/Portfolio/" target="_blank">Matheus de Almeida Ferreira</a>.
   </footer>
